--- a/PedidosApp.API/appsettings.Development.json
+++ b/PedidosApp.API/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  /* Endereço do banco de dados local (Docker) */
+  "ConnectionStrings": {
+    "PedidosApp": "Data Source=localhost,1434;Initial Catalog=master;User ID=sa;Password=Coti@2025;Encrypt=False"
   }
 }
