fix: Inclusão de etapa de testes no workflow e mapeamento dos endpoints da API.

--- a/.github/workflows/master_pedidosapp-sergio.yml
+++ b/.github/workflows/master_pedidosapp-sergio.yml
@@ -10,7 +10,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+
+  Compilar:
     runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
@@ -35,9 +36,16 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  Testar:
     runs-on: windows-latest
-    needs: build
+    needs: Compilar
+    steps:
+       - name: Set up Tests
+         run: echo "Configurando o ambiente de testes"  
+
+  Implantar:
+    runs-on: windows-latest
+    needs: Testar
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
